Fix sidebar collapsed chevron direction to point right

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -47,6 +47,11 @@
   opacity: 0.5;
 }
 
+.menu__list-item--collapsed .menu__link--sublist-caret::after,
+.menu__list-item--collapsed .menu__caret::before {
+  transform: rotate(-90deg);
+}
+
 /* ===== Sidebar Typography ===== */
 
 .menu {
